<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".noteselect.MainActivity">

    <androidx.appcompat.widget.Toolbar android:id="@+id/tool_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        style="?attr/toolbarStyle">
    </androidx.appcompat.widget.Toolbar>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" >

        <ListView
            android:id="@+id/list_view_notes"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:divider="@android:color/transparent" />

        <TableLayout
            android:id="@+id/list_view_empty"
            android:layout_centerInParent="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >
            <TableRow
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" >
                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btn_create_new_note"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="12dp"
                    android:text="@string/create_new_notes"
                    android:gravity="center_vertical"
                    app:icon="@drawable/ic_baseline_add_24px"
                    android:layout_marginBottom="15dp"
                    />
            </TableRow>
            <TableRow
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" >
                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btn_import_existing_notes"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="12dp"
                    android:text="@string/import_existing_notes"
                    android:gravity="center_vertical"
                    app:icon="@drawable/ic_baseline_cloud_download_24px"
                    android:layout_marginBottom="15dp"
                    />
            </TableRow>
            <TableRow
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" >
                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btn_sync_dropbox"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="12dp"
                    android:text="@string/sync_with_dropbox"
                    android:gravity="center_vertical"
                    app:icon="@drawable/ic_dropbox"
                    android:layout_marginBottom="15dp"
                    />
            </TableRow>
        </TableLayout>

    </RelativeLayout>

    <FrameLayout
        android:id="@+id/adView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

</LinearLayout>