<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:id="@+id/long_click_rename"
        android:title="Rename" />
    <item android:id="@+id/long_click_delete"
        android:title="Delete" />
</menu>